[package]
name = "backend"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["simulation", "frontend"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"

log = "0.4"
pretty_env_logger = "0.4"

simulation = { path = "simulation" }
