[package]
name = "backend"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["simulation"]

[dependencies]
tokio = { version = "1", features = ["full"] }

# we are edgy boys and use the master branch for JUICY features but we specify commits so nothing breaks
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "801e04bd5369eb39e126c75f6d11e1e9597304d8" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "801e04bd5369eb39e126c75f6d11e1e9597304d8" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "273522e697140db9a3ff5932ba667f502bfad57e" }

log = "0.4"
pretty_env_logger = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

simulation = { path = "simulation" }
