[package]
name = "frontend"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = "0.3"
plotters-canvas = "^0.3.*"
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }

[profile.release]
lto = true