[package]
name = "frontend"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
plotters = "0.3"
plotters-canvas = "^0.3.*"

seed = "0.8"
chrono = "0.4"
serde = "1.0"

wasm-timer = "0.2"
web-sys = {version = "0.3", features = ["HtmlDivElement", "CssStyleDeclaration", "HtmlElement"]}

wasm-bindgen-futures = "0.4.17"
serde-wasm-bindgen = "0.1.3"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
