[package]
name = "simulation"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "*"
rand_distr = "*"
itertools = "*"
tinyvec = { version = "*", features = ["alloc", "serde"]}

[profile.dev]
opt-level = 3
